--- a/src/app/book-detail/book-detail.component.html
+++ b/src/app/book-detail/book-detail.component.html
@@ -1,1 +1,8 @@
-<p>book-detail works!</p>
+<h2>Book Details</h2>
+
+<div *ngIf="book">
+  <h3>{{ book.name }}</h3>
+  <h4>{{ book.price | currency }}</h4>
+  <p>{{ book.description }}</p>
+  <!-- <button type="button" (click)="addToCart(book)">Buy</button> -->
+</div>
