2 files modified, 2 added

--- a/src/app/book-review/book-review.component.html
+++ b/src/app/book-review/book-review.component.html
@@ -1,1 +1,6 @@
-<p>book-review works!</p>
+<h3>Book Review </h3>
+
+<div class="shipping-item" *ngFor="let shipping of shippingCosts | async">
+  <span>{{ shipping.type }}</span>
+  <span>{{ shipping.price | currency }}</span>
+</div>
