--- a/src/app/book-review/book-review.component.html
+++ b/src/app/book-review/book-review.component.html
@@ -1,6 +1,6 @@
 <h3>Book Review </h3>
 
-<div class="shipping-item" *ngFor="let shipping of shippingCosts | async">
-  <span>{{ shipping.type }}</span>
-  <span>{{ shipping.price | currency }}</span>
+<div class="review-item" *ngFor="let rev of review | async">
+  <span>{{ rev.name }}</span>
+  <span>{{ rev.review | currency }}</span>
 </div>
