--- a/src/app/book-detail/book-detail.component.html
+++ b/src/app/book-detail/book-detail.component.html
@@ -5,4 +5,8 @@
   <h4>{{ book.price | currency }}</h4>
   <p>{{ book.description }}</p>
   <!-- <button type="button" (click)="addToCart(book)">Buy</button> -->
+
+  <p>
+    <a routerLink="/book-review">Book Review </a>
+  </p>
 </div>
