--- a/src/app/book-review/book-review.component.html
+++ b/src/app/book-review/book-review.component.html
@@ -1,6 +1,6 @@
 <h3>Book Review </h3>
 
-<div class="review-item" *ngFor="let rev of review | async">
-  <span>{{ rev.name }}</span>
-  <span>{{ rev.review | currency }}</span>
-</div>
+<!-- <div class="review-item" *ngFor="let review of reviews | async">
+  <span>{{ review.name }}</span>
+  <span>{{ review.review | currency }}</span>
+</div> -->
